<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="2dp"
        android:layout_marginTop="2dp">

        <androidx.cardview.widget.CardView
            android:layout_width="170dp"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            app:cardCornerRadius="10dp"
            app:cardElevation="5dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/img_icon"
                    android:layout_width="wrap_content"
                    android:layout_height="130dp"
                    android:layout_gravity="center"

                    android:src="@drawable/temptest" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:orientation="vertical">


                    <TextView
                    android:id="@+id/txtTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="5dp"
                    android:text="@string/long_string"
                    android:layout_marginStart="5dp"
                    android:singleLine="true"
                    android:textColor="@color/black_color"
                    android:textSize="16sp"
                    android:textStyle="bold"
                     android:layout_marginBottom="9dp"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="12sp"
                        android:id="@+id/prod_type"
                        android:text="Regular"
                        android:layout_marginStart="10dp"

                        />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:layout_marginStart="5dp">

                        <TextView
                            android:id="@+id/price"
                            android:layout_weight="1"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="3dp"
                            android:padding="2dp"
                            android:text="@string/new_price"
                            android:textColor="@color/colorPrimary"
                            android:textSize="14sp"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/priceoofer"
                            android:layout_weight="1"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="3dp"
                            android:padding="2dp"
                            android:text="@string/price"
                            android:textColor="@color/black_color"
                            android:textSize="14sp"
                            android:textStyle="bold" />
                        <View
                            android:layout_width="50dp"
                            android:layout_height="1dp"/>
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:padding="5dp">

                        <LinearLayout
                            android:id="@+id/lvl_subitem"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:orientation="vertical" />
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/lvl_cardbg"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|end"
                android:background="@drawable/bg_green_plus"
                android:gravity="center">

                <ImageView
                    android:id="@+id/img_card"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:src="@drawable/ic_plus_rounded" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/lvl_offer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/ic_discount_shape"
        android:gravity="center">

        <TextView
            android:id="@+id/txt_offer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/dicount_str"
            android:textColor="@color/white_color"
            android:textSize="14sp"
            android:textStyle="bold" />
    </LinearLayout>

</RelativeLayout>
